--- a/res/layout/preview_video_fragment.xml
+++ b/res/layout/preview_video_fragment.xml
@@ -18,52 +18,52 @@
   
 -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/top"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background_color"
-    android:gravity="center"
-    tools:context=".ui.preview.PreviewAudioFragment">
+<RelativeLayout android:id="@+id/top"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/background_color"
+                android:gravity="center"
+                tools:context=".ui.preview.PreviewAudioFragment">
 
-	<FrameLayout
+    <FrameLayout
         android:id="@+id/visual_area"
-   	    android:layout_width="match_parent"
-   	    android:layout_height="0dp"
-   	    android:layout_alignParentTop="true"
-   	    android:layout_above="@+id/media_controller"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_above="@+id/media_controller"
+        android:layout_alignParentTop="true"
         >
-    
-	   	<VideoView
-	   	    android:id="@+id/video_preview"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"  
-			android:layout_gravity="center" 
-			/>
-	   	
-   	</FrameLayout>
-   	
-   	<com.owncloud.android.media.MediaControlView 
-   	    android:id="@id/media_controller"
-   	    android:layout_width="match_parent"
-   	    android:layout_height="wrap_content"
-   	    android:layout_alignParentBottom="true"
-		android:layout_margin="16dp"
-   	    />
 
-	<!-- last to draw, will be top in Z axis -->
-	<ProgressBar
-		android:id="@+id/transferProgressBar"
-		android:layout_width="match_parent"
-		android:layout_height="4dp"
-		android:padding="0dp"
-		android:layout_margin="0dp"
-		android:layout_alignParentTop="true"
-		style="@style/Widget.ownCloud.TopProgressBar"
-		android:indeterminate="false"
-		android:indeterminateOnly="false"
-		android:visibility="visible"
-		/>
+        <VideoView
+            android:id="@+id/video_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            />
+
+    </FrameLayout>
+
+    <com.owncloud.android.media.MediaControlView
+        android:id="@id/media_controller"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        />
+
+    <!-- last to draw, will be top in Z axis -->
+    <ProgressBar
+        android:id="@+id/transferProgressBar"
+        style="@style/Widget.ownCloud.TopProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_alignParentTop="true"
+        android:layout_margin="0dp"
+        android:indeterminate="false"
+        android:indeterminateOnly="false"
+        android:padding="0dp"
+        android:visibility="visible"
+        />
 
 </RelativeLayout>
