--- a/res/layout/preview_audio_fragment.xml
+++ b/res/layout/preview_audio_fragment.xml
@@ -27,44 +27,35 @@
     android:gravity="center"
     tools:context=".ui.preview.PreviewAudioFragment">
 
-	<FrameLayout
+    <FrameLayout
         android:id="@+id/visual_area"
-   	    android:layout_width="match_parent"
-   	    android:layout_height="0dp"
-   	    android:layout_alignParentTop="true"
-   	    android:layout_above="@+id/media_controller"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/media_controller"
         >
     
-	    <ImageView
-	        android:id="@+id/image_preview"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:layout_margin="@dimen/standard_margin"
-	        android:layout_gravity="center"
-	        android:contentDescription="@string/preview_image_description"
-	        android:src="@drawable/logo" />
-	    
-   	</FrameLayout>
-   	
-   	<com.owncloud.android.media.MediaControlView 
-   	    android:id="@id/media_controller"
-   	    android:layout_width="match_parent"
-   	    android:layout_height="wrap_content"
-   	    android:layout_alignParentBottom="true"
-		android:layout_margin="16dp"
-   	    />
+        <ImageView
+            android:id="@+id/image_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/standard_margin"
+            android:layout_gravity="center"
+            android:contentDescription="@string/preview_image_description"
+            android:src="@drawable/logo" />
 
-    <ProgressBar
-        android:id="@+id/transferProgressBar"
+    </FrameLayout>
+
+    <com.owncloud.android.media.MediaControlView
+        android:id="@id/media_controller"
         android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:padding="0dp"
-        android:layout_margin="0dp"
-        android:layout_alignParentTop="true"
-        style="@style/Widget.ownCloud.TopProgressBar"
-        android:indeterminate="false"
-        android:indeterminateOnly="false"
-        android:visibility="visible"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
         />
+
+    <!-- last to draw, will be top in Z axis -->
+    <include layout="@layout/top_progress_bar"
+        android:id="@+id/transferProgressBar"/>
 
 </RelativeLayout>
