Update margins of text preview

--- a/res/layout/preview_text_fragment.xml
+++ b/res/layout/preview_text_fragment.xml
@@ -35,10 +35,10 @@
             android:id="@+id/text_preview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="@dimen/standard_margin"
+            android:layout_marginLeft="@dimen/standard_margin"
+            android:layout_marginRight="@dimen/standard_margin"
+            android:layout_marginStart="@dimen/standard_margin"
             android:visibility="gone"/>
     </ScrollView>
 
